# Max-flow-min-cut

./: CMakeLists.txt  README.md  log.out  main.cpp  preprocess.py
data/: data  data2.in  newdata.txt
include/: graph.h
